fix cells horizantal alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,7 @@ body {
     padding: 5px;
     display: grid;
     align-items: center;
+    justify-items: center;
     grid-template-columns: 1fr 1fr 1fr;
 }
 
